feat: Add Login function
