# api-rest/src/main/java/com/edu/quique/controllers/adapters/LoginController.java
@@ -1,8 +1,30 @@
 package com.edu.quique.controllers.adapters;
 
+import com.edu.quique.api.LoginApi;
+import com.edu.quique.api.model.LoginRequest;
+import com.edu.quique.api.model.LoginResponse;
 import lombok.AllArgsConstructor;
+import org.springframework.http.ResponseEntity;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 @AllArgsConstructor
-public class LoginController {}
+public class LoginController implements LoginApi {
+  private final AuthenticationManager authenticacionManager;
+
+  @Override
+  public ResponseEntity<LoginResponse> login(LoginRequest loginRequest) {
+    Authentication authentication =
+        authenticacionManager.authenticate(
+            new UsernamePasswordAuthenticationToken(
+                loginRequest.getUsername(), loginRequest.getPassword()));
+    SecurityContextHolder.getContext().setAuthentication(authentication);
+    var res = new LoginResponse();
+    res.setToken("Login check!!");
+    return ResponseEntity.ok(res);
+  }
+}
